[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "signal"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"

thiserror = "1"
async-trait = "0.1"

uuid = { version = "1", features = ["v4", "serde"] }

bcrypt = "0.15"

jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }